updated with HTML, reorganized CSS

--- a/css/vcu_primo_custom.css
+++ b/css/vcu_primo_custom.css
@@ -113,3 +113,11 @@ li#exlidSignOut a[href^="logout"] { display: none; }*/
 /* 
 	END browse/advanced search links
 */
+
+/* citation linker special styles */
+.EXLCitationLinkerHeader h1 {
+	font-size: 1.5em;
+	margin: 0;
+	padding: 0 12px;
+	color: #444;
+}
