hid "find databases" link in header menu

--- a/css/vcu_services_page_custom.css
+++ b/css/vcu_services_page_custom.css
@@ -48,3 +48,8 @@ div.top-banner img {
         width: 400px !important;
         margin: 0 auto;
 }
+
+/* hide "find databases" link on vcu_services_page */
+.EXLMainMenuITEMFindInDB {
+	display: none;
+}
